{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 68,
  "lineage": "b9bb2df1-a76a-e659-7a44-12ff4c9a11dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b2ce657310dbfd9",
            "association_id": "eipassoc-0154d7339f6676e5c",
            "domain": "vpc",
            "id": "eipalloc-00b2ce657310dbfd9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-01f311bdd12ca47bf",
            "private_dns": "ip-192-168-3-49.us-east-2.compute.internal",
            "private_ip": "192.168.3.49",
            "public_dns": "ec2-3-23-179-222.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.179.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Jenkins-eip"
            },
            "tags_all": {
              "Name": "Jenkins-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a36e1502605b4aa",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-0bd1213421fcff373",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd1213421fcff373",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "anael1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c440077eb022e9b0",
            "private_dns": "ip-192-168-1-122.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.122",
            "public_ip": "18.216.146.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a2ed55d59ea6e84",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0595d9803b30d4de4",
            "tags": {
              "Name": "Batsion-ec2"
            },
            "tags_all": {
              "Name": "Batsion-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019f5d9bb4766bd62"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public-bastion",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a36e1502605b4aa",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-08c3e42bf78b34f84",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "profile6",
            "id": "i-08c3e42bf78b34f84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "anael1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f15831d0f6a5ef6",
            "private_dns": "ip-192-168-4-91.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ec556a50b05922b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084bbfd1421a175f2",
            "tags": {
              "Name": "jenkins-ec2"
            },
            "tags_all": {
              "Name": "jenkins-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a7f9ee13735c62b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins5",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_security_group.lb",
            "aws_subnet.jenkins",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:internet-gateway/igw-04d6543cbd6984b2f",
            "id": "igw-04d6543cbd6984b2f",
            "owner_id": "729855611727",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-lb/2c9649a0c23d2f40",
            "arn_suffix": "app/my-lb/2c9649a0c23d2f40",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-lb-1851751538.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-lb/2c9649a0c23d2f40",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-099d15e1188703643"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f2d6f93a1e8160d"
              },
              {
                "subnet_id": "subnet-0595d9803b30d4de4"
              },
              {
                "subnet_id": "subnet-0a868247863c74643"
              }
            ],
            "subnets": [
              "subnet-04f2d6f93a1e8160d",
              "subnet-0595d9803b30d4de4",
              "subnet-0a868247863c74643"
            ],
            "vpc_id": "vpc-068c6f656577a295f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins5",
            "aws_instance.jenkins",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_security_group.lb",
            "aws_subnet.jenkins",
            "aws_subnet.nat",
            "aws_subnet.public-bastion",
            "aws_subnet.public-lb",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_eg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-lb/2c9649a0c23d2f40/55f8397aa67ab387",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-lb/2c9649a0c23d2f40/55f8397aa67ab387",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-lb/2c9649a0c23d2f40",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_app_eg2_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-lb/2c9649a0c23d2f40/499385c89bf53037",
            "certificate_arn": "arn:aws:acm:us-east-2:729855611727:certificate/acfb426c-3a41-4bdf-b33f-c32df3e49a2a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-tg/d238240be3fb71f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-lb/2c9649a0c23d2f40/499385c89bf53037",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-lb/2c9649a0c23d2f40",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.api",
            "aws_acm_certificate_validation.api",
            "aws_iam_instance_profile.jenkins5",
            "aws_instance.jenkins",
            "aws_lb.lb",
            "aws_lb_target_group.tg",
            "aws_route53_record.api_validation",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_security_group.lb",
            "aws_subnet.jenkins",
            "aws_subnet.nat",
            "aws_subnet.public-bastion",
            "aws_subnet.public-lb",
            "aws_vpc.jenkins",
            "data.aws_route53_zone.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-tg/d238240be3fb71f3",
            "arn_suffix": "targetgroup/my-tg/d238240be3fb71f3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 9,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 9
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-tg/d238240be3fb71f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins5",
            "aws_instance.jenkins",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_security_group.lb",
            "aws_subnet.jenkins",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-tg/d238240be3fb71f3-20230730224452423500000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-tg/d238240be3fb71f3",
            "target_id": "i-08c3e42bf78b34f84"
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins5",
            "aws_instance.jenkins",
            "aws_lb_target_group.tg",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_security_group.lb",
            "aws_subnet.jenkins",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b2ce657310dbfd9",
            "association_id": "eipassoc-0154d7339f6676e5c",
            "connectivity_type": "public",
            "id": "nat-01c49353c8a91fd0b",
            "network_interface_id": "eni-01f311bdd12ca47bf",
            "private_ip": "192.168.3.49",
            "public_ip": "3.23.179.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a868247863c74643",
            "tags": {
              "Name": "Jenkins-NAT"
            },
            "tags_all": {
              "Name": "Jenkins-NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.nat",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:route-table/rtb-071615b45d3b83f40",
            "id": "rtb-071615b45d3b83f40",
            "owner_id": "729855611727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c49353c8a91fd0b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " route table private"
            },
            "tags_all": {
              "Name": " route table private"
            },
            "timeouts": null,
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.nat",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:route-table/rtb-0e6f63d79270c5a4b",
            "id": "rtb-0e6f63d79270c5a4b",
            "owner_id": "729855611727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d6543cbd6984b2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc8301718f85d1b5",
            "route_table_id": "rtb-0e6f63d79270c5a4b",
            "subnet_id": "subnet-0595d9803b30d4de4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-bastion",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03da519d6e1412597",
            "route_table_id": "rtb-071615b45d3b83f40",
            "subnet_id": "subnet-084bbfd1421a175f2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.nat",
            "aws_subnet.jenkins",
            "aws_subnet.nat",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042e3182767eba908",
            "route_table_id": "rtb-0e6f63d79270c5a4b",
            "subnet_id": "subnet-04f2d6f93a1e8160d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-lb",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c99dc6e356d9b3d",
            "route_table_id": "rtb-0e6f63d79270c5a4b",
            "subnet_id": "subnet-0a868247863c74643"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.nat",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-019f5d9bb4766bd62",
            "description": "Security group for bastion hosts",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh outgoing traffic to jenkins",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-019f5d9bb4766bd62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH from management IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-sg",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-sg"
            },
            "tags_all": {
              "Name": "Bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-02a7f9ee13735c62b",
            "description": "Security group for jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a7f9ee13735c62b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from bastion hosts",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019f5d9bb4766bd62"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming tcp from LB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d15e1188703643"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG-web",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.lb",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-099d15e1188703643",
            "description": "Security group for the load-balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-099d15e1188703643",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SG-loadbalancer",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg"
            },
            "tags_all": {
              "Name": "lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-084bbfd1421a175f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084bbfd1421a175f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-subnet"
            },
            "tags_all": {
              "Name": "jenkins-subnet"
            },
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-0a868247863c74643",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a868247863c74643",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nat-subnet"
            },
            "tags_all": {
              "Name": "nat-subnet"
            },
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-0595d9803b30d4de4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0595d9803b30d4de4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion-subnet"
            },
            "tags_all": {
              "Name": "bastion-subnet"
            },
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-04f2d6f93a1e8160d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f2d6f93a1e8160d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lb-subnet"
            },
            "tags_all": {
              "Name": "lb-subnet"
            },
            "vpc_id": "vpc-068c6f656577a295f"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:vpc/vpc-068c6f656577a295f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04e80d9145660d1d6",
            "default_route_table_id": "rtb-0504fd4f451633906",
            "default_security_group_id": "sg-0141a9e62a5ebd5e8",
            "dhcp_options_id": "dopt-0b1f95f4d053dd89a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068c6f656577a295f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0504fd4f451633906",
            "owner_id": "729855611727",
            "tags": {
              "Name": "Jenkins-vpc"
            },
            "tags_all": {
              "Name": "Jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}